Update main.tex including figure directories

--- a/main.tex
+++ b/main.tex
@@ -504,7 +504,7 @@ Kim, 2022).
 
 \begin{figure}
 \centering
-\includegraphics[width=4.16667in,height=\textheight,keepaspectratio]{Figure.png}
+\includegraphics[width=4.16667in,height=\textheight,keepaspectratio]{figure/Figure.png}
 \caption{Imbalance in Job Demand and Resources (JD-R Model)}
 \end{figure}
 
@@ -646,7 +646,7 @@ impact overtime of employees.
 
 \begin{figure}
 \centering
-\includegraphics[width=4.16667in,height=\textheight,keepaspectratio]{lbs.png}
+\includegraphics[width=4.16667in,height=\textheight,keepaspectratio]{figure/lbs.png}
 \caption{Disequilibrium between Labor Supply and Demand}
 \end{figure}
 
@@ -702,7 +702,7 @@ Burnout}\label{optimization-of-working-hours-and-fatigue-driven-burnout}
 
 \begin{figure}
 \centering
-\includegraphics[width=4.16667in,height=\textheight,keepaspectratio]{Individual overwork decision.png}
+\includegraphics[width=4.16667in,height=\textheight,keepaspectratio]{figure/Individual overwork decision.png}
 \caption{Individual Labor--Leisure Trade-off and Overtime Decision}
 \end{figure}
 
@@ -811,7 +811,7 @@ how the level of job satisfaction is estimated on average.
 
 \begin{figure}
 \centering
-\pandocbounded{\includegraphics[keepaspectratio]{Graph_working hour(week).png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figure/Graph_working hour(week).png}}
 \caption{Aggregated Job Satisfaction by Weekly Working Hours}
 \end{figure}
 
@@ -922,7 +922,7 @@ time and, in turn, influence job satisfaction.
 
 \begin{figure}
 \centering
-\includegraphics[width=5.20833in,height=\textheight,keepaspectratio]{DAG.png}
+\includegraphics[width=5.20833in,height=\textheight,keepaspectratio]{figure/DAG.png}
 \caption{Directed Acyclic Graph of Instrumental Identification}
 \end{figure}
 
@@ -1525,7 +1525,7 @@ detailed distribution of labor shortage rates is provided in Appendix
 
 \begin{figure}
 \centering
-\pandocbounded{\includegraphics[keepaspectratio]{000066.png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figure/000066.png}}
 \caption{Average Labor Shortage Rate by Cluster
 (2009\textasciitilde2023)}
 \end{figure}
@@ -1558,7 +1558,7 @@ higher than the 4\% threshold.
 
 \begin{figure}
 \centering
-\pandocbounded{\includegraphics[keepaspectratio]{00003e.png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figure/00003e.png}}
 \caption{Distribution of Labor Shortage Rates by Firm Size and Industry}
 \end{figure}
 
@@ -2893,7 +2893,7 @@ Log conditional likelihood & -107218.88 & -104574.97 & -104533.24 & -104492.32 &
 
 \begin{figure}
 \centering
-\pandocbounded{\includegraphics[keepaspectratio]{Share of Compliance.png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figure/Share of Compliance.png}}
 \caption{Average Causal Effects Based on CDF Gaps in Working Hours (by
 Cluster)}
 \end{figure}
@@ -3258,14 +3258,14 @@ and inefficient working hour practices.
 
 \begin{figure}
 \centering
-\pandocbounded{\includegraphics[keepaspectratio]{000010.png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figure/000010.png}}
 \caption{Average Labor Shortage Rate by Industry
 (2009\textasciitilde2023)}
 \end{figure}
 
 \begin{figure}
 \centering
-\pandocbounded{\includegraphics[keepaspectratio]{00001e.PNG}}
+\pandocbounded{\includegraphics[keepaspectratio]{figure/00001e.PNG}}
 \caption{Cluster Dendrogram of Labor Shortage Rates
 (2009\textasciitilde2023)}
 \end{figure}
